# termix_wip

./: .clangd  .gitignore  CMakeLists.txt  DEVELOPMENT.md  MANUAL.md  README.md  _README-DRAFT.md
common/: CMakeLists.txt  fixme.c  paths.c
inc/: abi.h  arch.h  fixme.h  logging.h  macros.h  paths.h  platform.h  types.h
ldr/: CMakeLists.txt  DEVELOPMENT.md  README.md  dyld.c  dyld.h  dynld.c  dynld.h  load.c  load.h  main.c
ldr/elf/: CMakeLists.txt  _arch.h  _dyn.h  _elf.h  _reloc.h  _segs.h  _symtab.h  _types.h  debug.c  dyn.c  elf.h  info.c  parse.c  reloc.c  segs.c  symtab.c
tests/: CMakeLists.txt  hello_main.c
tests/lib/: hello.c  hello.h  hello_bare.h  syscalls.h
tests/lib/linux/: hello_bare.c  syscalls.h
